--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@vue/cli-service": "~4.4.0",
     "babel-plugin-import": "^1.13.0",
     "less-loader": "^6.1.1",
-    "postcss-px2rem": "^0.3.0",
+    "postcss-pxtorem": "^5.1.1",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
     "vue-template-compiler": "^2.6.11"
